Fixing spacing issues

--- a/css/app.css
+++ b/css/app.css
@@ -2455,13 +2455,14 @@ p {
   height: 5rem;
   background-color: white;
   margin-top: auto;
-  margin-bottom: 4%;
+  margin-bottom: auto;
   padding-bottom: 0;
   padding-top: 2%; }
   .copyright > p {
     margin-top: 0;
     text-align: center;
-    padding: 0; }
+    padding: 0;
+    height: 2rem; }
 
 .end {
   background-color: #000;
@@ -2471,7 +2472,7 @@ p {
   left: 0;
   width: 100%;
   right: 0;
-  height: 4rem;
+  height: 3.7rem;
   line-height: 4.5rem; }
   .end > ul > li {
     color: white;
