--- a/css/layouts/_home.scss
+++ b/css/layouts/_home.scss
@@ -173,7 +173,7 @@ p {
   height: 5rem;
   background-color: white;
   margin-top: auto;
-  margin-bottom: 4%;
+  margin-bottom: auto;
   padding-bottom: 0;
   padding-top: 2%;
 
@@ -181,6 +181,7 @@ p {
     margin-top: 0;
     text-align: center;
     padding: 0;
+    height: 2rem;
 
   }
 }
@@ -193,7 +194,7 @@ p {
   left: 0;
   width: 100%;
   right: 0;
-  height: 4rem;
+  height: 3.7rem;
   line-height: $title-bar-height;
 
   & > ul > li {
